test/errors/type/collections/set/__eq.yasl
echo mt.lookup(collections.set(), .__band)(collections.set(), true)
